# autoresearch-mlx

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  analysis.py  bench_compare.py  data_sources.py  log_utils.py  prepare.py  program.md  program_data.md  pyproject.toml  train.py
.claude/: settings.json
.claude/skills/run-experiment/: SKILL.md
data/: .gitignore
docs/: guide.md
internal/: ane-integration.md  data-investigations.md
internal/analysis/: 2026-03-08_eval-bottleneck.md  2026-03-08_prepare-py-conformance.md  2026-03-08_throughput-regression.md
internal/log/: log_2026-03-08.md  log_2026-03-09.md  log_2026-03-15.md
tests/: test_optimizations.py
