[project]
name = "autoresearch"
version = "0.6.0"
description = "MLX port of karpathy's autoresearch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "mlx>=0.24.0",
    "numpy>=2.2.6",
    "orjson>=3.11.7",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
]
